--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -17,69 +17,69 @@
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
         <!-- Viewport for responsive web design -->
-	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+	    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         
-		<script type="text/javascript" src="js/scripts.js"></script>
-        <script type="text/JavaScript" src="jQuery.innerfade.js"></script>
-        <script src="jquery.innerfade.js" type="text/javascript" ></script>
-        <script type="text/javascript" src="jquery.easing.1.3.js"></script>
-        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+		<script type="text/javascript" src="./js/scripts.js"></script>
+        <script type="text/JavaScript" src="./jQuery.innerfade.js"></script>
+        <script src="./jquery.innerfade.js" type="text/javascript" ></script>
+        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
 		
-	    <link rel="stylesheet" href="style.css"> 
-	    <link rel="stylesheet" href="nav[1].css">
+	    <link rel="stylesheet" href="./style.css"> 
+	    <link rel="stylesheet" href="./nav[1].css">
 		
-		<link rel="stylesheet" href="../CSS/HTML5-style-2.css">
-		<link rel="stylesheet" href="../CSS/nav-style.css">
-		<link rel="stylesheet" href="../CSS/starter-page-style-2.css">
-		<link rel="stylesheet" href="../CSS/starter-page-style.css">
-		<link rel="stylesheet" href="../CSS/gallery-2col.css">
-		<link rel="stylesheet" href="../CSS/gallery-3col-mix.css">
-		<link rel="stylesheet" href="../CSS/gallery-one-col.css">
-		<link rel="stylesheet" href="../CSS/gallery-page-HTML5.css">
-		<link rel="stylesheet" href="../CSS/gallery-ie7.css">
+		<link rel="stylesheet" href="./CSS/HTML5-style-2.css">
+		<link rel="stylesheet" href="./CSS/nav-style.css">
+		<link rel="stylesheet" href="./CSS/starter-page-style-2.css">
+		<link rel="stylesheet" href="./CSS/starter-page-style.css">
+		<link rel="stylesheet" href="./CSS/gallery-2col.css">
+		<link rel="stylesheet" href="./CSS/gallery-3col-mix.css">
+		<link rel="stylesheet" href="./CSS/gallery-one-col.css">
+		<link rel="stylesheet" href="./CSS/gallery-page-HTML5.css">
+		<link rel="stylesheet" href="./CSS/gallery-ie7.css">
 
-		<link rel="stylesheet" href="../CSS/bullets.css">
-		<link rel="stylesheet" href="../CSS/grad-pic-html5.css">
-		<link rel="stylesheet" href="../CSS/grad-pic-text-HTML5.css">
-		<link rel="stylesheet" href="../CSS/gradient-style-HTML5.css">
-		<link rel="stylesheet" href="../CSS/gradient-style.css">
-		<link rel="stylesheet" href="../CSS/liquid.css">
-		<link rel="stylesheet" href="../CSS/multiple-css2.css">
-		<link rel="stylesheet" href="../CSS/multiple-css3.css">
-		<link rel="stylesheet" href="../CSS/rosette.css">
-		<link rel="stylesheet" href="../CSS/squares-html5.css">
-		<link rel="stylesheet" href="../CSS/transparent.css">
-		<link rel="stylesheet" href="../CSS/gradient-pic.css">
+		<link rel="stylesheet" href="./CSS/bullets.css">
+		<link rel="stylesheet" href="./CSS/grad-pic-html5.css">
+		<link rel="stylesheet" href="./CSS/grad-pic-text-HTML5.css">
+		<link rel="stylesheet" href="./CSS/gradient-style-HTML5.css">
+		<link rel="stylesheet" href="./CSS/gradient-style.css">
+		<link rel="stylesheet" href="./CSS/liquid.css">
+		<link rel="stylesheet" href="./CSS/multiple-css2.css">
+		<link rel="stylesheet" href="./CSS/multiple-css3.css">
+		<link rel="stylesheet" href="./CSS/rosette.css">
+		<link rel="stylesheet" href="./CSS/squares-html5.css">
+		<link rel="stylesheet" href="./CSS/transparent.css">
+		<link rel="stylesheet" href="./CSS/gradient-pic.css">
 
-		<link rel="stylesheet" href="../CSS/equal-2d.css">
-		<link rel="stylesheet" href="../CSS/fixed-3d.css">
-		<link rel="stylesheet" href="../CSS/horiz-vert-menu.css">
-		<link rel="stylesheet" href="../CSS/ie-6-style.css">
-		<link rel="stylesheet" href="../CSS/inline-block.css">
-		<link rel="stylesheet" href="../CSS/inset-active.css">
-		<link rel="stylesheet" href="../CSS/main.css">
-		<link rel="stylesheet" href="../CSS/mainstyle.css">
-		<link rel="stylesheet" href="../CSS/nifty-tabs.css">
-		<link rel="stylesheet" href="../CSS/niftyCorners.css">
-		<link rel="stylesheet" href="../CSS/sliding.css">
-		<link rel="stylesheet" href="../CSS/squaretabs.css">
-		<link rel="stylesheet" href="../CSS/style-yosemite-2.css">
-		<link rel="stylesheet" href="../CSS/turquoise.css">
-		<link rel="stylesheet" href="../CSS/variable-2d.css">
-		<link rel="stylesheet" href="../CSS/variable-3d.css">
+		<link rel="stylesheet" href="./CSS/equal-2d.css">
+		<link rel="stylesheet" href="./CSS/fixed-3d.css">
+		<link rel="stylesheet" href="./CSS/horiz-vert-menu.css">
+		<link rel="stylesheet" href="./CSS/ie-6-style.css">
+		<link rel="stylesheet" href="./CSS/inline-block.css">
+		<link rel="stylesheet" href="./CSS/inset-active.css">
+		<link rel="stylesheet" href="./CSS/main.css">
+		<link rel="stylesheet" href="./CSS/mainstyle.css">
+		<link rel="stylesheet" href="./CSS/nifty-tabs.css">
+		<link rel="stylesheet" href="./CSS/niftyCorners.css">
+		<link rel="stylesheet" href="./CSS/sliding.css">
+		<link rel="stylesheet" href="./CSS/squaretabs.css">
+		<link rel="stylesheet" href="./CSS/style-yosemite-2.css">
+		<link rel="stylesheet" href="./CSS/turquoise.css">
+		<link rel="stylesheet" href="./CSS/variable-2d.css">
+		<link rel="stylesheet" href="./CSS/variable-3d.css">
 
-		<link rel="stylesheet" href="../CSS/position-video.css">
+		<link rel="stylesheet" href="./CSS/position-video.css">
 
-		<link rel="stylesheet" href="../CSS/css3-tabs-ie.css">
-		<link rel="stylesheet" href="../CSS/css3-tabs.css">
-		<link rel="stylesheet" href="../CSS/niftyCorners.css">
-		<link rel="stylesheet" href="../CSS/style-fig3.css">
+		<link rel="stylesheet" href="./CSS/css3-tabs-ie.css">
+		<link rel="stylesheet" href="./CSS/css3-tabs.css">
+		<link rel="stylesheet" href="./CSS/niftyCorners.css">
+		<link rel="stylesheet" href="./CSS/style-fig3.css">
 		
-		<link rel="stylesheet" href="../CSS/position-video.css">
-		<link rel="stylesheet" href="../CSS/position-video.css">
-		<link rel="stylesheet" href="../CSS/position-video.css">
-		<link rel="stylesheet" href="../CSS/position-video.css">
+		<link rel="stylesheet" href="./CSS/position-video.css">
+		<link rel="stylesheet" href="./CSS/position-video.css">
+		<link rel="stylesheet" href="./CSS/position-video.css">
+		<link rel="stylesheet" href="./CSS/position-video.css">
 
 		
 		
