--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -86,8 +86,8 @@
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
-	    <link rel="icon" type="image/png" href="../weed.jpg">
-	    <link rel="icon" type="image/png" href="../flexy-logo.png">
+	    <link rel="icon" type="image/png" href="./weed.jpg">
+	    <link rel="icon" type="image/png" href="./flexy-logo.png">
         <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
         <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css” />
         <!-- Font Awesome Icons -->
