--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -477,6 +477,34 @@
                         </header>
                         <h3>header Element</h3>
                         <p>Discussion of header element.</p>
+					<!-- <link rel = "stylesheet" type = "text/css" href = "gallery-one-col.css">
+</head>
+<body> -->
+					<div class="data" id="gallery-onemidcol">
+                        <div id="gallery-onegallery-block">
+                            <ul id="gallerypagecol-1">
+                                <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/beachthumb.jpg" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
+                            </ul>
+							<ul id="gallerypagecol-2">
+                                <li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
+								<li><a href="#"><img src="images/nicothumb.jpg" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/childbeachthumb.jpg" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
+                            </ul>
+                            <ul id="gallerypagecol-3">
+								<li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
+								<li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
+                                <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
+
+                            </ul><br class="clear">
+                        </div><!--gallery block closed-->
+                    </div><!--midcol closed-->
+                    <ul id="gallery-onecol-1">
+                        <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=" "></a></li>
+                        <li><a href="#"><img src="images/catthumb.jpg" title="Cat" alt="Cat"><img class="hid" src="images/catbig.jpg" alt=" "></a></li>
+                        <li><a href="#"><img src="images/beachthumb.jpg" title="Beach" alt="Beach"><img class="hid" src="images/beachbig.jpg" alt=" "></a></li>
+                    </ul>
                         <h3>footer Element</h3>
                         <p>Discussion of footer element.</p>
                         <h3>section Element</h3>
