--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	    <link rel="icon" type="image/png" href="weed.jpg">
 	    <link rel="icon" type="image/png" href="flexy-logo.png">
         <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-        <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css” />
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
         <!-- Font Awesome Icons -->
         <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 		<!-- Google Fonts -->
@@ -80,8 +80,8 @@
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-        <script src=”js/jquery.mobile-1.0.1.min.js”></script>
-        <script type=”text/javascript” src=”assets/js/ui.js”></script>
+        <script src="js/jquery.mobile-1.0.1.min.js"></script>
+        <script type="text/javascript" src="assets/js/ui.js"></script>
         <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
         <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
@@ -101,12 +101,12 @@
 		
 		<script src="validate.js"></script>
 		<script src="webpack.common.js"></script>
-		<script src=”jquery-ui-1.8.17.custom.min.js”></script>
-		<script src=”jquery.color.js”></script>
-		<script src=”jquery-1.12.0.min.js”></script>
-		<script src=”jquery-1.7.1.min.js”></script>
-		<script src=”jquery-ui-1.8.17.custom.min.js”></script>
-		<script src=”jquery.color.js”></script>
+		<script src="jquery-ui-1.8.17.custom.min.js"></script>
+		<script src="jquery.color.js"></script>
+		<script src="jquery-1.12.0.min.js"></script>
+		<script src="jquery-1.7.1.min.js"></script>
+		<script src="jquery-ui-1.8.17.custom.min.js"></script>
+		<script src="jquery.color.js"></script>
 		
 
 		
