--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <!-- Viewport for responsive web design -->
 	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
 		<link rel="stylesheet" href="./CSS/menus.css" type="text/css" media="screen" charset="utf-8"/>
-		<script src="../../jquery.hoverIntent.js" type="text/javascript" charset="utf-8"></script>
-		<link rel="stylesheet" href="../../css/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8"/>
+		<script src="./flowplayer-3.2.7.swf" type="text/javascript" charset="utf-8"></script>
+		<link rel="stylesheet" href="css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8"/>
         <link rel="stylesheet" href="tabs.css" type="text/css" media="screen" charset="utf-8"/>
 	    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
 	    <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
