--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
 	    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
 	    <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="js/script.js"></script>
+        <link rel="stylesheet" href="colorbox.css" type="text/css" media="screen" charset="utf-8"/>
+        <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
 		<link rel="stylesheet" href="css-jq/base.css" media="screen">	
         <link rel="stylesheet" href="navigation.css" media="screen">
         <script src="jquery.easing.1.3.js"></script>
         <script src="./js/script.js"></script>
 
 		<link rel="stylesheet" href="CSS/lightbox.css">
+		<link rel="stylesheet" href="CSS/colorbox.css">
 		
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
