--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <link rel="stylesheet" href="colorbox.css" type="text/css" media="screen" charset="utf-8"/>
         <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
+		<link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8"/>	
+        <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8"/>
+		
 		<link rel="stylesheet" href="css-jq/base.css" media="screen">	
         <link rel="stylesheet" href="navigation.css" media="screen">
         <script src="jquery.easing.1.3.js"></script>
