--- a/index.html
+++ b/index.html
@@ -802,8 +802,8 @@
                     <div class="row">
                         <div class="çol-12" padding="2%">
                             <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2>
-                        </div><!-- end-col-12 --
-                    </div><!-- end-row --
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-row -->
                     <br class="clear">
                     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                         <div class="çol-12">
@@ -814,23 +814,23 @@
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-1.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
-                            </div><!-- end_left-col --
-                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>--
-                                <ul><!--start of menu list--
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                                </ul><!--end of menu list--
+                                </ul><!--end of menu list-->
                             </nav>
-                            <!--</div> removed and replaced with </nav>--
+                            <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
                                 <img title="Devon countryside" alt="Devon countryside" src="./bda-2.jpg" height="229" width="398">
                             </div>
-                        </div><!-- end-col-12 --
-                    </div><!-- end-.row --
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
                     <br class="clear">
 
                     <div class="row" style="background-color: #F6931E;">
@@ -842,29 +842,29 @@
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-3.jpg" width="300">
                                 <br>
                                 The superb interior of one of our cottages
-                            </div><!-- end_left-col --
-                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>--
-                                <ul><!--start of menu list--
+                            </div><!-- end_left-col -->
+                            <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                                </ul><!--end of menu list--
+                                </ul><!--end of menu list-->
                             </nav>
-                            <!--</div> removed and replaced with </nav>--
+                            <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5style2midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
                                 <img title="Devon countryside" alt="Devon countryside" src="./bda-4.jpg" height="229" width="398">
                             </div>
-                        </div><!-- end-col-12 --
-                    </div><!-- end-.row --
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-.row -->
                     <br class="clear">
                             <div class="col-3">
                                 <img class="circle" src="img/orange-globe.png">
-                            </div> <!-- end col-3 --
-                        </div><!-- end col-11 --
-                    </div> <!-- end class row --
+                            </div> <!-- end col-3 -->
+                        </div><!-- end col-11 -->
+                    </div> <!-- end class row -->
 
                     <br class="clear">
                     <div class="row" style="background-color: #1abc9c;">
