--- a/index.html
+++ b/index.html
@@ -300,6 +300,39 @@
     </head>
     <body>
 		<div id="container">
+			<body>
+	    <div class="row">
+            <div class="col-12">
+                <nav role="navigation" id="nav">
+                    <input class="trigger" type="checkbox" id="mainNavButton">
+                    <label for="mainNavButton" onclick>Menu</label>
+                    <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./index[1].html">About Us</a></li>
+                        <li><a href="./membership.html">Products</a></li>
+                        <li><a href="./news.html">Blog</a></li>
+                        <li><a href="./starter-page.html">Specials</a></li>
+                        <li><a href="./welcome.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div><!-- col-12 -->
+        </div><!-- end-.row -->
+
+        <div class="wrapper">
+            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+                <h1 id="html5style2h1">StarTrackr!</h1>
+                <div class="col-12">
+                    <img class="logo" src="img/flexy-logo.png">
+                </div><!-- end-col-12 -->
+            </header>
+            <br class="clear">
+				<div class="data" id="#html5style2content">
+                    <div class="row">
+                        <div class="çol-12" padding="2%">
+                            <h2 class="dark">Practical HTML5 Projects for fun and Profit!</h2>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-row -->
+			<!--
 			 <div class="row">
                 <div class="col-12">
 		            <div>
@@ -307,13 +340,13 @@
                         <div id="red" class="box">Go!</div>
                     </div>
                     <img class="logo" src="./img/flexy-logo.png">
-			    </div><!-- end-col-12 -->
-            </div><!-- end-row -->
+			    </div><!-- end-col-12 --
+            </div><!-- end-row --
 			
             <div class="row">
                 <div class="col-12">
 				    <header data-role="header" class="data" id="html5-ch1-7header">
-                            <!-- <div id="hdr"> changed to <header> -->
+                            <!-- <div id="hdr"> changed to <header> --
                         <hgroup>
                             <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit</h1>
                             <h2 class="heading"><strong>StarTrackr!</strong></h2>
@@ -322,8 +355,8 @@
                             <br>Orris
                         </p>
                     </header>
-				</div><!-- end-col-12 -->
-            </div><!-- end-row -->
+				</div><!-- end-col-12 --
+            </div><!-- end-row --
             
             <div class="row">
                 <div class="col-12">
@@ -338,13 +371,13 @@
                             <li><a href="./starter-page.html">Specials</a></li>
 					        <li><a href="./index[1].html">Blog</a></li>
 					        <li><a href="./index2.html">Products</a></li>
-							<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> -->
+							<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> --
                         </ul>
                     </nav>
-				</div><!-- end-col-12 -->
-            </div><!-- end-row -->
+				</div><!-- end-col-12 --
+            </div><!-- end-row 
 			
-            <div id="#html5-style-2content" class="data">
+            <div id="#html5-style-2content" class="data"> -->
                 <div class="row">
                     <div class="col-12">
 		                <h2>Welcome!</h2>
