--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -12,7 +12,7 @@
     <!-- head section is communicating about the page to the browser -->
     <!-- Anything you write under head is not displayed on the browser content page. -->
     <meta charset="UTF-8">
-    <title>Two column rollover Gallery</title>
+    <title>Page Two <!-- Two column rollover Gallery --></title>
 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Viewport for responsive web design -->
