--- a/index.html
+++ b/index.html
@@ -544,10 +544,10 @@
                         </header> 
                         <nav class="data" id="gallery-pagenav">
                             <ul>
-                                <li class="btn"><a href="#Page Two">Page Two</a></li>
-                                <li class="btn"><a href="#Page Three">Page Three</a></li>
-                                <li class="btn"><a href="#Page Four">Page Four</a></li>
-                                <li class="btn"><a href="#Home Page">Home Page</a></li>
+                                <li class="btn"><a href="gallery-oone-col.html">Page Two</a></li>
+                                <li class="btn"><a href="gallery-2col.html">Page Three</a></li>
+                                <li class="btn"><a href="#gallery-3col-mix.html">Page Four</a></li>
+                                <li class="btn"><a href="gallery-page-validated.html">Home Page</a></li>
                             </ul>
                         </nav>
                         <br class="clear">
