--- a/index.html
+++ b/index.html
@@ -587,10 +587,10 @@
                             </header> 
                             <nav class="data" id="gallery-pagenav">
                                 <ul>
-                                    <li class="btn"><a href="#">Page Two</a></li>
-                                    <li class="btn"><a href="#">Page Three</a></li>
-                                    <li class="btn"><a href="#">Page Four</a></li>
-                                    <li class="btn"><a href="#">Home Page</a></li>
+                                    <li class="btn"><a href="gallery-oone-col.html">Page Two</a></li>
+                                    <li class="btn"><a href="gallery-2col.html">Page Three</a></li>
+                                    <li class="btn"><a href="#gallery-3col-mix.html">Page Four</a></li>
+                                    <li class="btn"><a href="gallery-page-validated.html">Home Page</a></li>
                                 </ul>
                             </nav>
                             <br class="clear">
@@ -737,11 +737,11 @@
                                         <h2>Hover the mouse over a small picture to see an enlarged version</h2>
                                     </header> 
                                     <nav class="data" id="gallery-pagenav">
-                                        <ul>
-                                            <li class="btn"><a href="#">Page Two</a></li>
-                                            <li class="btn"><a href="#">Page Three</a></li>
-                                            <li class="btn"><a href="#">Page Four</a></li>
-                                            <li class="btn"><a href="#">Home Page</a></li>
+                                         <ul>
+                                            <li class="btn"><a href="gallery-oone-col.html">Page Two</a></li>
+                                            <li class="btn"><a href="gallery-2col.html">Page Three</a></li>
+                                            <li class="btn"><a href="#gallery-3col-mix.html">Page Four</a></li>
+                                            <li class="btn"><a href="gallery-page-validated.html">Home Page</a></li>
                                         </ul>
                                     </nav>
                                     <br class="clear">
