--- a/index3.html
+++ b/index3.html
@@ -63,83 +63,85 @@
 <body>
 <a id="top"></a>
 <div id="container">
-<header>
-    <h1>THE PARISH OF ST.DAVIDS</h1>
-</header>
-<div id="hnav">
-      <ul>
-        <li>
-         <a title="Southbury Church Services" href="southbury-church-services.html">Services</a></li>
-         <li>
-         <a title="What's On" href="southbury-parish-whatson.html">What&#39;s On</a></li>
-         <li>
-         <a title="Contact Us" href="southbury-parish-contact.html">Contact Us</a></li>
+	<div class="row">
+        <div class="col-12">
+            <nav role="navigation" id="nav">
+                <input class="trigger" type="checkbox" id="mainNavButton">
+                <label for="mainNavButton" onclick>Menu</label>
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./index[1].html">About Us</a></li>
+                    <li><a href="./membership.html">Products</a></li>
+                    <li><a href="./news.html">Blog</a></li>
+                    <li><a href="./starter-page.html">Specials</a></li>
+                    <li><a href="./welcome.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div><!-- col-12 -->
+    </div><!-- end-.row -->
+    <header>
+        <h1>THE PARISH OF ST.DAVIDS</h1>
+    </header>
+    <div id="hnav">
+        <ul>
+            <li><a title="Southbury Church Services" href="southbury-church-services.html">Services</a></li>
+            <li><a title="What's On" href="southbury-parish-whatson.html">What&#39;s On</a></li>
+			<li><a title="Contact Us" href="southbury-parish-contact.html">Contact Us</a></li>
         </ul>
-</div>
-<br class="clear"/><br />
-<div id="main-content"><br />
-<!--side menu column starts-->
-   <nav>
-    <ul>
-    	<li>
-        <a href="southbury-parish-aboutus.html" title="About us">About Us</a></li>
-        <li>
-		<a href="southbury-parish-who.html" title="Who's Who in Southbury Parish">Who&#39;s Who</a></li>
-        <li>
-        <a href="southbury-parish-location.html" title="Location of the parish">Find us</a></li>
-        <li>
-		<a href="southbury-parish-churches.html" title="Description of each church">Churches</a></li>
-        <li>
-        <a href="southbury-parish-activities.html" title="Parish activities and organisations">Activities</a></li>
-        <li>
-        <a href="southbury-parish-faqs.html" title="Frequently Asked Questions (Baptisms, Funerals, Weddings)">
-		FAQs</a></li>
-        <li>
-        <a href="index.html" title="Return to Home Page">Home Page</a></li>
-      </ul>
-    </nav><!--end of side menu column-->
-  <!--start of far right column-->
- <div id="creditcol"><br />
-       <img alt="Church logo" title="Church logo" src="images/churchlogo.jpg">
- 		<p><a href="http://validator.w3.org/check?uri=referer">
-<!--<img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5">--></a>
-<img src="../../Apress%20Images%20for%20docs/Ch04%20Rollover%20Navigation%20Menus/images%20for%20docs/HTML5_Logo_64.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5">
-        <span class="tiny"><br>Validated by the World Wide Web Consortium</span>
-        </p>
-		<p><span class="tiny">Website design and production by<br />
-	    O Baker Web Design</span>
-	    </p>
-</div>
-<div id="midcontent">
-     <h2>CONTACT US</h2><br />
-<div id="mid-left-col">   
-	 	 <h2>Contact James Miller</h2>Vice Chairman of the Parochial Church Council<br />
-	 	 Tel: 01234 333 555<br /><br />
-	 	 <h2>Church Office Postal Address:</h2>Church Office, Southbury Parish<br />
-		 Sunday School Building, The Churchyard<br />Church Lane, Southbury, SX24 6JM
-</div>
-<div id="mid-right-col">
-<img class="cntr" title="Southbury Church" alt="Southbury Church" height="172" src="images/southbury220.jpg" width="220" />
-</div>
-</div>
-</div>
-<br class="clear" />    
-<!-- Footer -->
-            <footer class="w3-light-grey">
-                <div id="farewell"&nbsp; Copyright (c) All rights reserved. Designed by O Baker Web Design
-                    Powered<a href="https://orris0.github.io/orris0/index.html" target="_blank"> Practical HTML5 Projects For Fun and Profit.... Come back and visit us soon</a>
-                    <!-- Optional JavaScript --
-                    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-                    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-                    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-                    <script src="js/libs/modernizr-2.5.3.min.js"></script>
-                    <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-                    <script type="text/javascript" src="./js/scripts.js"></script>
-                    <script src="lib/jquery-1.7.1.min.js" type="text/javascript"></script>
-                    <script type="text/javascript" src="scripts.js"></script>
-                    <!-- end lightbox -->
-                    <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
+    </div>
+    <br class="clear"/><br />
+    <div id="main-content"><br />
+        <!--side menu column starts-->
+        <nav>
+            <ul>
+    	        <li><a href="southbury-parish-aboutus.html" title="About us">About Us</a></li>
+                <li><a href="southbury-parish-who.html" title="Who's Who in Southbury Parish">Who&#39;s Who</a></li>
+                <li><a href="southbury-parish-location.html" title="Location of the parish">Find us</a></li>
+                <li><a href="southbury-parish-churches.html" title="Description of each church">Churches</a></li>
+                <li><a href="southbury-parish-activities.html" title="Parish activities and organisations">Activities</a></li>
+				<li><a href="southbury-parish-faqs.html" title="Frequently Asked Questions (Baptisms, Funerals, Weddings)">	FAQs</a></li>
+                <li><a href="index.html" title="Return to Home Page">Home Page</a></li>
+           </ul>
+        </nav><!--end of side menu column-->
+        <!--start of far right column-->
+        <div id="creditcol"><br />
+            <img alt="Church logo" title="Church logo" src="images/churchlogo.jpg">
+ 		    <p><a href="http://validator.w3.org/check?uri=referer">
+                <!--<img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5">--></a><img src="../../Apress%20Images%20for%20docs/Ch04%20Rollover%20Navigation%20Menus/images%20for%20docs/HTML5_Logo_64.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5">
+                <span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+            </p>
+		    <p><span class="tiny">Website design and production by<br /> O Baker Web Design</span></p>
+        </div>
+        <div id="midcontent">
+            <h2>CONTACT US</h2><br />
+        <div id="mid-left-col">   
+	 	    <h2>Contact James Miller</h2>
+		    Vice Chairman of the Parochial Church Council<br />
+	 	    Tel: 01234 333 555<br /><br />
+	 	    <h2>Church Office Postal Address:</h2>Church Office, Southbury Parish<br />
+		    Sunday School Building, The Churchyard<br />Church Lane, Southbury, SX24 6JM
+        </div>
+        <div id="mid-right-col">
+            <img class="cntr" title="Southbury Church" alt="Southbury Church" height="172" src="images/southbury220.jpg" width="220" />
+        </div>
+        </div>
+    </div>
+    <br class="clear" />    
+    <!-- Footer -->
+    <footer class="w3-light-grey">
+        <div id="farewell"&nbsp; Copyright (c) All rights reserved. Designed by O Baker Web Design Powered<a href="https://orris0.github.io/orris0/index.html" target="_blank"> Practical HTML5 Projects For Fun and Profit.... Come back and visit us soon</a>
+            <!-- Optional JavaScript --
+            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+            <script src="js/libs/modernizr-2.5.3.min.js"></script>
+            <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+            <script type="text/javascript" src="./js/scripts.js"></script>
+            <script src="lib/jquery-1.7.1.min.js" type="text/javascript"></script>
+            <script type="text/javascript" src="scripts.js"></script>
+            <!-- end lightbox -->
+            <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
                     <script type="text/javascript" src="./scripts.js"></script>
                     <!-- end colorbox -->
                     <!-- jcrop -->
